--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -12,8 +12,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/rate"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/ads"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:orientation="vertical"
@@ -23,8 +24,8 @@
             android:id="@+id/geo_id"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:onClick="choseLanguage"
             android:layout_weight="1"
+            android:onClick="choseLanguage"
             android:src="@drawable/geolang" />
 
         <ImageView
@@ -39,21 +40,11 @@
             android:id="@+id/ru_id"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:onClick="choseLanguage"
             android:layout_weight="1"
+            android:onClick="choseLanguage"
             android:src="@drawable/ruslang" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/rate"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_above="@+id/ads"
-        android:gravity="center_horizontal"
-        android:text="შეგვაფასეთ !"
-        android:textColor="@android:color/white"
-        android:textSize="22sp" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/ads"
@@ -62,17 +53,5 @@
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
         ads:adUnitId="@string/banner_ad_unit_id" />
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:id="@+id/sattings"
-            android:src="@drawable/settings" />
-    </RelativeLayout>
 
 </RelativeLayout>
