--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,35 +3,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_detail"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
     android:background="@drawable/background"
+    android:orientation="vertical"
     android:paddingTop="30dp"
     tools:context="com.example.giorgi.ihoroscope.DetailActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@android:color/white"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/detail_horoscope_name_id"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/detail_image_id"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="36dp"
-        android:textSize="22sp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:textColor="@android:color/white"
-        android:id="@+id/detail_description_id"/>
+            <TextView
+                android:id="@+id/detail_horoscope_name_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
 
+            <ImageView
+                android:id="@+id/detail_image_id"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="25dp" />
+
+            <TextView
+                android:id="@+id/detail_description_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="36dp"
+                android:textColor="@android:color/white"
+                android:textSize="22sp" />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
