--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -9,38 +9,41 @@
     android:paddingTop="30dp"
     tools:context="com.example.giorgi.ihoroscope.DetailActivity">
 
+    <TextView
+        android:id="@+id/detail_horoscope_name_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@android:color/white"
+        android:textSize="16sp" />
+
+    <ImageView
+        android:id="@+id/detail_image_id"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="25dp" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/detail_horoscope_name_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textColor="@android:color/white"
-                android:textSize="16sp" />
 
-            <ImageView
-                android:id="@+id/detail_image_id"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="25dp" />
 
             <TextView
                 android:id="@+id/detail_description_id"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="36dp"
                 android:textColor="@android:color/white"
-                android:textSize="22sp" />
+                android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
